--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
   <head>
     <title>Bubbles</title>
     <meta charset="utf-8"/>
+    <meta name="viewport" content="user-scalable=no, initial-scale=1, maximum-scale=1, minimum-scale=1, width=device-width">
     <link href="main.css" rel="stylesheet" type="text/css"/>
   </head>
   <body>
